nan sheng added

--- a/html/home-ch.html
+++ b/html/home-ch.html
@@ -647,10 +647,10 @@
       	<li>
       		<div class="direction-r">
       			<div class="flag-wrapper">
-      				<span class="flag">创业对话</span>
+      				<span class="flag">INNO Talk</span>
       				<span class="time-wrapper"><span class="time">4/14 7:00PM-9:00PM</span></span>
       			</div>
-      			<div class="desc">顶尖的创业团队们与经验丰富的评委和知识渊博的教授能碰撞出怎样的火花？如果你对创业有兴趣，这个机会不容错过！</div>
+      			<div class="desc">创业企业与资方对谈，探讨大众创新万众创业形势下的思考与突破</div>
       		</div>
       	</li>
 
@@ -658,10 +658,10 @@
       	<li>
       		<div class="direction-l">
       			<div class="flag-wrapper">
-      				<span class="flag">企业招聘会</span>
-      				<span class="time-wrapper"><span class="time">4/13 6:00PM-8:00PM</span></span>
+      				<span class="flag">职业发展论坛</span>
+      				<span class="time-wrapper"><span class="time">4/13 6:00PM-9:00PM</span></span>
       			</div>
-      			<div class="desc">专为有梦想的年轻人搭建的招聘平台！</div>
+      			<div class="desc">由峰会筹委会代表，猎聘代表及北美电信代表携招聘企业HR／高管进行职业发展讲座。</div>
       		</div>
       	</li>
 
@@ -669,10 +669,10 @@
       	<li>
       		<div class="direction-r">
       			<div class="flag-wrapper">
-      				<span class="flag">社会活动</span>
-      				<span class="time-wrapper"><span class="time">4/14 8:00PM-11:00PM</span></span>
+      				<span class="flag">菁英派对</span>
+      				<span class="time-wrapper"><span class="time">4/14 9:00PM-11:00PM</span></span>
       			</div>
-      			<div class="desc">一年一度在利兹卡尔顿酒店的交流活动，有专供饮品和许多娱乐活动！与同伴们放松畅谈的好时机！</div>
+      			<div class="desc">在专业正式的研讨会之后以放松，娱乐为主题的菁英派对</div>
       		</div>
       	</li>
 
