--- a/html/home.html
+++ b/html/home.html
@@ -636,7 +636,7 @@
       	<li>
       		<div class="direction-r">
       			<div class="flag-wrapper">
-      				<span class="flag">InnoTalk</span>
+      				<span class="flag">Inno Talk</span>
       				<span class="time-wrapper"><span class="time">4/14 7:00PM-9:00PM</span></span>
       			</div>
       			<div class="desc">A thought-provoking conversation between startup teams, guests, and professors. Innotalk is a wonderful opportunity for anyone interested in learning about the exciting world of startups. </div>
@@ -648,9 +648,9 @@
       		<div class="direction-l">
       			<div class="flag-wrapper">
       				<span class="flag">Career Panel</span>
-      				<span class="time-wrapper"><span class="time">4/13 6:00PM-8:00PM</span></span>
+      				<span class="time-wrapper"><span class="time">4/13 6:00PM-9:00PM</span></span>
       			</div>
-      			<div class="desc">An excellent speed-dating opportunity for companies and job seekers. Bring your resumes and talk with the Human Resource representatives at the desks.</div>
+      			<div class="desc">Presentation by representatives from the Summit Board, Liepin and HR from participating companies.</div>
       		</div>
       	</li>
 
@@ -658,10 +658,10 @@
       	<li>
       		<div class="direction-r">
       			<div class="flag-wrapper">
-      				<span class="flag">Social Event</span>
-      				<span class="time-wrapper"><span class="time">4/14 8:00PM-11:00PM</span></span>
+      				<span class="flag">Social Banquet</span>
+      				<span class="time-wrapper"><span class="time">4/14 9:00PM-11:00PM</span></span>
       			</div>
-      			<div class="desc">A mixer at Ritz-Carlton Hotel (subject to changes) that we host each year. Drinks are provided and will be loads of fun! Good opportunity to mingle and relax with your peers.</div>
+      			<div class="desc">After a day's of fruitful agenda, chill out with us at our social event. Talk, dance and drink with your peers.</div>
       		</div>
       	</li>
 
