--- a/html/panels-ch.html
+++ b/html/panels-ch.html
@@ -299,9 +299,9 @@
                 <div class="speaker-title">安永大中华首席合伙人</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img buttonImg" src="../assets/images/Wei_Yuan.png"/ speaker-name="WeiYuan">
-                <div class="speaker-name">袁桅</div>
-                <div class="speaker-title">启迪控股总裁</div>
+                <img class="speaker-img" src="../assets/images/Xiaodong_Wen.jpg"/ speaker-name="XiaodongWen">
+                <div class="speaker-name">温晓东</div>
+                <div class="speaker-title">韬蕴资本集团创始人及首席执行官</div>
               </div>
               <div class="col-6 center-txt speaker-item">
                 <img class="speaker-img" src="../assets/images/Guang_Yang.jpg"/ speaker-name="GuangYang">
@@ -444,11 +444,6 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img buttonImg" src="../assets/images/Tiankai_Cui.jpg"/ speaker-name="TiankaiCui">
-                <div class="speaker-name">崔天凯</div>
-                <div class="speaker-title">中华人民共和国驻美国特命全权大使</div>
-              </div>
               <div class="col-6 center-txt speaker-item">
                 <img class="speaker-img buttonImg" src="../assets/images/Kevin_Rudd.jpeg"/ speaker-name="KevinRudd">
                 <div class="speaker-name">陆克文</div>
