--- a/html/panels.html
+++ b/html/panels.html
@@ -459,11 +459,6 @@
             </div>
             <div class="row">
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/Tiankai_Cui.jpg"/ speaker-name="TiankaiCui">
-                <div class="speaker-name">Tiankai Cui</div>
-                <div class="speaker-title">Chinese Ambassador to the US</div>
-              </div>
-              <div class="col-6 center-txt speaker-item">
                 <img class="speaker-img" src="../assets/images/Kevin_Rudd.jpeg"/>
                 <div class="speaker-name">Kevin Rudd</div>
                 <div class="speaker-title">Former Prime Minister of Australia</div>
@@ -611,7 +606,7 @@
                 <div class="speaker-title">Founder of Mountain Top</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/Wei_Zhou.jpg"/ speaker-name="WenZhou">
+                <img class="speaker-img" src="../assets/images/Wen_Zhou.jpg"/ speaker-name="WenZhou">
                 <div class="speaker-name">Wen Zhou</div>
                 <div class="speaker-title">CEO of 3.1 Philip Lim</div>
               </div>
