--- a/html/speakers-ch.html
+++ b/html/speakers-ch.html
@@ -297,12 +297,12 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-auto col-6 center-txt speaker-item">
+          <div class="col-md-3 col-6 center-txt speaker-item">
             <img class="speaker-img" src="../assets/images/Ying_Fu.jpeg"/>
             <div class="speaker-name">傅莹</div>
             <div class="speaker-title">全国人大外事委员会副主任委员</div>
           </div>
-          <div class="col-md-auto col-6 center-txt speaker-item">
+          <div class="col-md-3 col-6 center-txt speaker-item">
             <img class="speaker-img buttonImg" src="../assets/images/Shuang_Zhang.jpg"/ speaker-name="ShuangZhang">
             <div class="speaker-name">张爽</div>
             <div class="speaker-title">桃花源⽣态保护基⾦会CEO</div>
@@ -317,7 +317,7 @@
             </div>
 
           </div>
-          <div class="col-md-auto col-6 center-txt speaker-item">
+          <div class="col-md-3 col-6 center-txt speaker-item">
             <img class="speaker-img buttonImg" src="../assets/images/Guangchang_Guo.jpg"/ speaker-name="GuangchangGuo">
             <div class="speaker-name">郭广昌</div>
             <div class="speaker-title">复星国际董事长</div>
@@ -332,27 +332,10 @@
             </div>
 
           </div>
-          <div class="col-md-auto col-6 center-txt speaker-item">
+          <div class="col-md-3 col-6 center-txt speaker-item">
             <img class="speaker-img" src="../assets/images/Rosler_Philipp.jpeg"/>
             <div class="speaker-name">Philipp Rösler</div>
             <div class="speaker-title">慈航公益基金会首席执行官</div>
-          </div>
-          <div class="col-md-auto col-6 center-txt speaker-item">
-            <img class="speaker-img buttonImg" src="../assets/images/Mang_Su.jpeg"/ speaker-name="MangSu">
-            <div class="speaker-name">苏芒</div>
-            <div class="speaker-title">时尚集团总裁</div>
-
-            <!-- The Modal -->
-            <div id="MangSuBio" class="modal">
-              <div class="modal-content">
-                <span class="close">&times;</span>
-                <p>苏芒，时尚集团总裁，中国第一代时尚人，在杂志、广告、编辑、运营等方面拥有最全面的时尚媒体经验，以开创性和发展性著称，是中国最具传奇色彩的媒体人。</p>
-                <p>1994年加入时尚，创办及管理运营十余本杂志，包括《时尚伊人》、《时尚先生》、《时尚家居》、《时尚健康》、《时尚芭莎》等，其中《时尚芭莎》以独创性的模式及迅猛的发展速度，开创了7本芭莎品牌系列杂志的先河，成为全球范围内的奇迹，旗下品牌《芭莎艺术》不仅成为全世界发行量最大的艺术杂志，并因此带动了八个国家《芭莎艺术》的诞生。在如今的新媒体时代，带领集团在数字、视频、活动等领域多方发展的同时，亦联手行业外众多顶级企业进行跨界设计合作，开创了新的传媒运营模式。</p>
-                <p>她不仅在杂志行业不断创新、锐意进取，更是一位赋有社会责任感的女性。她于2003年创办芭莎明星慈善夜，开创中国时尚慈善的先河，结合以时尚、明星、企业、品牌为一体的新模式，11年来共募款过两亿，成为中国规模最大、影响力最大的慈善活动品牌，帮助无数贫困家庭获得新生，两次荣获国家最高慈善奖项——中华慈善奖，并于2013荣获CCTV年度慈善人物。</p>
-                <p>她毕业于中国音乐学院，曾获长江商学院EMBA学位，在服务于时尚集团20年间，苏芒善于带领团队，以时尚的方式推动慈善、公益、娱乐、艺术等方面并做出卓越的贡献，是中国最资深的时尚领军人物。</p>
-              </div>
-            </div>
-
           </div>
           <!-- <div class="col-12 center-txt">
             <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
@@ -495,27 +478,12 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-3 col-6 center-txt speaker-item">
+          <div class="col-md-4 col-6 center-txt speaker-item">
             <img class="speaker-img" src="../assets/images/Ying_Fu.jpeg"/>
             <div class="speaker-name">傅莹</div>
             <div class="speaker-title">全国人大外事委员会副主任委员</div>
           </div>
-          <div class="col-md-3 col-6 center-txt speaker-item">
-            <img class="speaker-img buttonImg" src="../assets/images/Tiankai_Cui.jpg"/ speaker-name="TiankaiCui">
-            <div class="speaker-name">崔天凯</div>
-            <div class="speaker-title">中华人民共和国驻美国特命全权大使</div>
-
-            <!-- The Modal -->
-            <div id="TiankaiCuiBio" class="modal">
-              <div class="modal-content">
-                <span class="close">&times;</span>
-                <p>崔天凯在2013年4月担任第十任中华人民共和国驻美利坚合众国特命全权大使。</p>
-                <p>1986年在美国霍普金斯大学国际公共政策获取硕士。曾先后担任过联合国总部中文秘书处译员、外交部国际司副处长、处长、参赞，外交部新闻司副司长、外交部发言人，常驻联合国代表团公使兼参赞，外交部政策研究室常务副主任、主任，外交部亚洲司司长，外交部部长助理，2007年至2009年担任中华人民共和国驻日本国特命全权大使，2009年担任外交部副部长。</p>
-              </div>
-            </div>
-
-          </div>
-          <div class="col-md-3 col-6 center-txt speaker-item">
+          <div class="col-md-4 col-6 center-txt speaker-item">
             <img class="speaker-img buttonImg" src="../assets/images/Kevin_Rudd.jpeg"/ speaker-name="KevinRudd">
             <div class="speaker-name">陆克文</div>
             <div class="speaker-title">澳大利亚前总理</div>
@@ -531,7 +499,7 @@
             </div>
 
           </div>
-          <div class="col-md-3 col-6 center-txt speaker-item">
+          <div class="col-md-4 col-6 center-txt speaker-item">
             <img class="speaker-img" src="../assets/images/Avery_Goldstein.png"/ speaker-name="AveryGoldstein">
             <div class="speaker-name">Avery Goldstein</div>
             <div class="speaker-title">宾大当代中国研究中心主任</div>
@@ -795,7 +763,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4 col-6 center-txt speaker-item">
+          <div class="col-md-3 col-6 center-txt speaker-item">
             <img class="speaker-img buttonImg" src="../assets/images/Yizhou_Wang.jpg"/ speaker-name="YizhouWang">
             <div class="speaker-name">王一舟</div>
             <div class="speaker-title">暴⾛漫画企业总监</div>
@@ -809,7 +777,7 @@
             </div>
 
           </div>
-          <div class="col-md-4 col-6 center-txt speaker-item">
+          <div class="col-md-3 col-6 center-txt speaker-item">
             <img class="speaker-img buttonImg" src="../assets/images/Sai_Wang.jpg"/ speaker-name="SaiWang">
             <div class="speaker-name">王赛</div>
             <div class="speaker-title">益桥创始人</div>
@@ -825,7 +793,7 @@
             </div>
 
           </div>
-          <div class="col-md-4 col-6 center-txt speaker-item">
+          <div class="col-md-3 col-6 center-txt speaker-item">
             <img class="speaker-img buttonImg" src="../assets/images/Shimin_Miao.jpg"/ speaker-name="ShiminMiao">
             <div class="speaker-name">苗世民</div>
             <div class="speaker-title">WABC创始人</div>
@@ -842,6 +810,11 @@
               </div>
             </div>
 
+          </div>
+          <div class="col-md-3 col-6 center-txt speaker-item">
+            <img class="speaker-img" src="../assets/images/Sheng_Nan.jpg"/ speaker-name="ShengNan">
+            <div class="speaker-name">南笙</div>
+            <div class="speaker-title">知名女演员</div>
           </div>
           <!-- <div class="col-12 center-txt">
             <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
