--- a/html/speakers.html
+++ b/html/speakers.html
@@ -296,7 +296,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-auto col-6 center-txt speaker-item">
+          <div class="col-md-3 col-6 center-txt speaker-item">
             <img class="speaker-img buttonImg" src="../assets/images/Ying_Fu.jpeg"/ speaker-name="YingFu">
             <div class="speaker-name">Ying Fu</div>
             <div class="speaker-title">Vice Chairperson of NPC Foreign Affairs Committee</div>
@@ -311,17 +311,17 @@
             </div>
 
           </div>
-          <div class="col-md-auto col-6 center-txt speaker-item">
+          <div class="col-md-3 col-6 center-txt speaker-item">
             <img class="speaker-img" src="../assets/images/Shuang_Zhang.jpg"/>
             <div class="speaker-name">Shuang Zhang</div>
             <div class="speaker-title">CEO of the Paradise Foundation</div>
           </div>
-          <div class="col-md-auto col-6 center-txt speaker-item">
+          <div class="col-md-3 col-6 center-txt speaker-item">
             <img class="speaker-img" src="../assets/images/Guangchang_Guo.jpg"/>
             <div class="speaker-name">Guangchang Guo</div>
             <div class="speaker-title">Chairman Fosun International</div>
           </div>
-          <div class="col-md-auto col-6 center-txt speaker-item">
+          <div class="col-md-3 col-6 center-txt speaker-item">
             <img class="speaker-img buttonImg" src="../assets/images/Rosler_Philipp.jpeg"/ speaker-name="RoslerPhilipp">
             <div class="speaker-name">Philipp Rösler</div>
             <div class="speaker-title">CEO of Hainan Cihang Charity Foundation</div>
@@ -339,11 +339,6 @@
               </div>
             </div>
 
-          </div>
-          <div class="col-md-auto col-6 center-txt speaker-item">
-            <img class="speaker-img" src="../assets/images/Mang_Su.jpeg"/ speaker-name="MangSu">
-            <div class="speaker-name">Mang Su</div>
-            <div class="speaker-title">CEO of Trends Media Group</div>
           </div>
           <!-- <div class="col-12 center-txt">
             <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
@@ -496,7 +491,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-3 col-6 center-txt speaker-item">
+          <div class="col-md-4 col-6 center-txt speaker-item">
             <img class="speaker-img buttonImg" src="../assets/images/Ying_Fu.jpeg"/ speaker-name="YingFu">
             <div class="speaker-name">Fu Ying</div>
             <div class="speaker-title">Vice Chairperson of NPC Foreign Affairs Committee</div>
@@ -511,17 +506,12 @@
             </div>
 
           </div>
-          <div class="col-md-3 col-6 center-txt speaker-item">
-            <img class="speaker-img" src="../assets/images/Tiankai_Cui.jpg"/ speaker-name="TiankaiCui">
-            <div class="speaker-name">Tiankai Cui</div>
-            <div class="speaker-title">Chinese Ambassador to the US</div>
-          </div>
-          <div class="col-md-3 col-6 center-txt speaker-item">
+          <div class="col-md-4 col-6 center-txt speaker-item">
             <img class="speaker-img" src="../assets/images/Kevin_Rudd.jpeg"/>
             <div class="speaker-name">Kevin Rudd</div>
             <div class="speaker-title">Former Prime Minister of Australia</div>
           </div>
-          <div class="col-md-3 col-6 center-txt speaker-item">
+          <div class="col-md-4 col-6 center-txt speaker-item">
             <img class="speaker-img buttonImg" src="../assets/images/Avery_Goldstein.png"/ speaker-name="AveryGoldstein">
             <div class="speaker-name">Avery Goldstein</div>
             <div class="speaker-title">David M. Knott Professor of Global Politics and International Relations</div>
@@ -621,7 +611,7 @@
           </div>
           <div class="col-md-3 col-6 center-txt speaker-item">
             <img class="speaker-img" src="../assets/images/Weiwei_Ma.jpg"/ speaker-name="WeiweiMa">
-            <div class="speaker-name">Weiei Ma</div>
+            <div class="speaker-name">Weiwei Ma</div>
             <div class="speaker-title">Deputy Chairman of Miguo</div>
           </div>
           <!-- <div class="col-12 center-txt">
@@ -690,7 +680,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4 col-6 center-txt speaker-item">
+          <div class="col-md-3 col-6 center-txt speaker-item">
             <img class="speaker-img" src="../assets/images/Yizhou_Wang.jpg"/ speaker-name="YizhouWang">
             <div class="speaker-name">Yizhou Wang</div>
             <div class="speaker-title">Director of Baozoumanhua</div>
@@ -704,7 +694,7 @@
             </div> -->
 
           </div>
-          <div class="col-md-4 col-6 center-txt speaker-item">
+          <div class="col-md-3 col-6 center-txt speaker-item">
             <img class="speaker-img buttonImg" src="../assets/images/Sai_Wang.jpg"/ speaker-name="SaiWang">
             <div class="speaker-name">Sai Wang</div>
             <div class="speaker-title">Founder of Yiqiao</div>
@@ -721,7 +711,7 @@
             </div>
 
           </div>
-          <div class="col-md-4 col-6 center-txt speaker-item">
+          <div class="col-md-3 col-6 center-txt speaker-item">
             <img class="speaker-img" src="../assets/images/Shimin_Miao.jpg"/ speaker-name="ShiminMiao">
             <div class="speaker-name">Shimin Miao</div>
             <div class="speaker-title">Founder of WABC</div>
@@ -738,6 +728,11 @@
               </div>
             </div> -->
 
+          </div>
+          <div class="col-md-3 col-6 center-txt speaker-item">
+            <img class="speaker-img" src="../assets/images/Sheng_Nan.jpg"/ speaker-name="ShengNan">
+            <div class="speaker-name">Sheng Nan</div>
+            <div class="speaker-title">Renowned Actress</div>
           </div>
           <!-- <div class="col-12 center-txt">
             <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
